# django-password-policies-iplweb

./: .editorconfig  .pre-commit-config.yaml  HISTORY.rst  MANIFEST.in  README.rst  manage.py  pyproject.toml  requirements_test.txt  ruff.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
docs/: conf.py
docs/_ext/: exts.py  fields.py
docs/_theme/djangodocs/: layout.html
docs/api/: password_policies.conf.rst  password_policies.forms.validators.rst
docs/topics/: contributing.rst  custom.validation.rst  install.rst  overview.rst  security.rst  setup.rst  support.rst  testing.rst
password_policies/: #fake.py#  __init__.py  admin.py  apps.py  compat.py  context_processors.py  managers.py  middleware.py  models.py  receivers.py  serializers.py  urls.py  utils.py  views.py
password_policies/conf/: settings.py
password_policies/forms/: __init__.py  admin.py  fields.py  validators.py
password_policies/locale/it/LC_MESSAGES/: django.mo  django.po
password_policies/locale/pl/LC_MESSAGES/: django.po
password_policies/locale/ru/LC_MESSAGES/: django.po
password_policies/migrations/: 0001_initial.py  0002_passwordprofile.py  0003_update_passwordprofile.py
password_policies/south_migrations/: 0001_initial.py
password_policies/tests/: __init__.py  test_forms.py  test_middleware.py  test_models.py  test_settings.py  test_utils.py  test_views.py  urls.py  views.py
password_policies/tests/templates/: 403.html
password_policies/tests/templates/registration/: password_reset_complete.html  password_reset_confirm.html
